# tiny-congress

./: .dockerignore  .eleventy.js  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .hadolint.yaml  .kube-linter.yaml  .shellcheckrc  .trivyignore  2025-12-10-caveat-the-messages-below-were-generated-by-the-u.txt  2025-12-12-this-session-is-being-continued-from-a-previous-co.txt  AGENTS.md  Cargo.toml  Makefile  README.md  Tiltfile  _typos.toml  docker-compose.test.yml  eval-corpus.py  go.mod  go.sum  gqlgen.yml  index.md  justfile  kind-config.yaml  mise.toml  objectives.md  package.json  refine-ledger.json  refine.toml  rustfmt.toml  server.go  skaffold.yaml  taplo.toml  toy2.ipynb  toy_deliberation-context.md  toy_deliberation.py  toy_deliberation_2.py
crates/tc-crypto/: Cargo.toml
crates/tc-engine-api/: Cargo.toml
crates/tc-engine-polling/: Cargo.toml
crates/tc-engine-ranking/: Cargo.toml
crates/tc-llm/: Cargo.toml
service/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  config.yaml.example  deny.toml  docker-compose.test.yml  go.mod  go.sum  run_integration_tests.sh
service/.sqlx/: query-005291508a6531aeca2e79d213710aceac63323b082b41e6d65fc1adef716b84.json  query-07feeb19aa9ceae07e83bae1924f928f4af995298f677494aea95f5eaa11e23e.json  query-09fc62080970cf40acccfaec21111bad9a92d3b7e850c807c3b73f3fbefb445a.json  query-0acc327d747b413c2740966b0ea21a7a1f5ef866083745545f05ae00a182d370.json  query-0d73573563c0ddf27aa754f51c7bdf05a0981fdb103cb7d816c59a051d0e51ce.json  query-23ef7d0b8ff11737977d109a0ff7134446fdebd98b928f1cbdf96db1c5f6df8f.json  query-24412ac66378b24d0eb349b446c9c67913b6be33d755664166b80c2f61d03174.json  query-3360d8fb3eaffeda9497b59f48e851c4d2ca5be3f4945180a3cf113d4748f6c1.json  query-361888f40fa9eba72ef71e2b8f7ed14f2c03c89547fb39d99cdc5f9d4d11990e.json  query-3ec520dd0213b7855dc9ad6277b73c578c1f1cac6de533519207fa5950305508.json  query-4e7de61921c74d6bcab35052c12f2b378e1dee119c5b443e04951f552f1e814f.json  query-4f08b6b95b28f9b42ee548dd27edc9eb42e5163ca9b592de31c752b887a3119a.json  query-510d67acfe927451faacca5596689ebd30baaa3e484d8237125a6a1f92e25f67.json  query-51bd635e1dc893e103ffce734dce5a960d2765ccbb2983335048d8ebaff63e98.json  query-53ec5068aa3f23607e929f17aa800940b45812150c867b4b420d48c692432816.json  query-60b4b512ce7501d7342f96bf5d5ce39e23f546ccdcd45e308a7a70f1472058f7.json  query-61dd2956a757058c3d00f8fe30163080ad7681559a7cbe611a3f253e044d1432.json  query-63e09b9d4b8bc3619e2296d79b422569fb88a5ae79b6dc6de9628c0d9cda6214.json  query-64937bf6c0386890e792445e323f1a2cf8159f771c556c73babd4699d81cf196.json  query-71287cee079e118bbf344d07961b85a57ce79144a58015b94712b82a53a524bc.json  query-7186c45e8b3a9f47d6ff2ebacb5361447e33667274898f685e62c51ebb2ca7c0.json  query-728f48547c0aa70104ee99ce9873df6c182bd08e77b38c808f94ba0dbfbede67.json  query-7446430db212d4118571734aad333680e209b3071ebed06285e40b2ad913cf2c.json  query-775767b8aac77f0eaf9c74efafae697227776845caf97b85e79379f3201968f1.json  query-7ab95419e177320de1ddda996ecd1af631878e06329263666f4b36e3a33e8ee5.json  query-7f7489f87e72782ba1ae21a4da82757bdd98fdf58b1fe495580c6fca1bb13ad2.json  query-7fd955254e33c3431b313324b04f1d5392d223ae131d45bd7a7414c9491c8159.json  query-837ca096bbbd366131f06ed7dc45e5060b3cad2ad383637f89392ee442829918.json  query-83c6cedca3f02ad2fea290895755520ff92304e40f53f6ae02870646d59c6c9a.json  query-9a4dcfb404b2d1a6f37813e869be366df343aa7f1dcf02748fc8a012a9e29101.json  query-a6e472a0139dd8b939a13c989d6815541f855c28d5826046d8dfbed5e2c8b50e.json  query-ae588139d0f3e5a98c693a99737a8f8d07ec762b63092b767e3ce2eee909c1f6.json  query-b60b54c6e8697ebc47869a6d3f85e178010d01105eddd4041308ad4eb20ab344.json  query-c2c2387d195c43b1cc7da1d75020f46607c17933b8720bea44648807163e95fa.json  query-c367e3577a18cddd7a1d2cc7d9dcf98cb7f2e24041f3e664ab22f65034506da9.json  query-cbdb607637da63c8a5f4d34cdc8df87c645fedf0e3f6ac577bd3162027ebb803.json  query-cc80021c9028dccf6136527cfedcd0b2335ba91f2326a44674deb3842be5a5d5.json  query-d1a886bd7daa015355cc0a6aea635035b7a87d0adb0ae420e89c8e591211f8ea.json  query-d9bc6fd20edaaf1ee127e3f01b45c2e11307425ee5f1877c33584b9a508cee07.json  query-dca8d3cdf37894d7d52a881840f291e5b8465e7c6f9b72327c13723808441cbc.json  (+8 more)
service/api/: server.go
service/db/: driver.go
service/migrations/: 01_init.sql  02_auth.sql  02_test_table.sql  03_accounts.sql  03_identity_event_store.sql  03_identity_read_models.sql  04_account_backups.sql  04_drop_test_table_and_redundant_indexes.sql  04_identity_rate_limits.sql  05_device_keys.sql  06_device_keys.sql  07_request_nonces.sql  08_reputation_tables.sql  09_rooms_tables.sql  10_verifier_as_account.sql  11_dimension_labels.sql  12_trust_endorsement_columns.sql  13_trust_tables.sql  14_room_constraints.sql  15_drop_influence_staked.sql  16_drop_influence_spent.sql  17_room_lifecycle.sql  18_invite_weight_fields.sql  19_poll_evidence.sql  20_room_engine_columns.sql  21_endorsement_in_slot.sql  22_bot_traces.sql  22_missing_indexes.sql  22_research_suggestions.sql  22_room_owner_and_roles.sql  23_bot_traces.sql  23_pgmq_bot_queue.sql  24_missing_indexes.sql  26_suggestions_poll_scope.sql  27_pgmq_queue_migration.sql  27_suggestions_poll_scope.sql  28_pgmq_queue_migration.sql  29_ranking_tables.sql  README.md  V1__initial_schema.sql
service/model/: models.go  poll.go  poll_impl.go  room_impl.go  room_impl_test.go  user.go  workflow.go
service/src/: build_info.rs  config.rs  db.rs  engine_registry.rs  graphql.rs  lib.rs  main.rs  observability.rs  rest.rs  storage.rs  validation.rs
service/tests/: adversarial_tests.rs  api_tests.rs  backup_repo_tests.rs  bot_scheduler_tests.rs  build_info_tests.rs  congress_client_tests.rs  db_tests.rs  device_handler_tests.rs  endorsement_api_tests.rs  evidence_tests.rs  graphql_schema_snapshot_tests.rs  graphql_tests.rs  http_tests.rs  identity_abuse_controls.rs  identity_account_creation.rs  identity_challenge_login.rs  identity_device_add.rs  identity_device_revoke.rs  identity_endorsements.rs  identity_event_store.rs  identity_handler_tests.rs  identity_policy.rs  (+29 more)
(+6034 files in other folders)
