[workspace]
members = ["service", "crates/tc-crypto"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "warn"
missing_panics_doc = "warn"
unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
module_name_repetitions = "allow"
missing_docs_in_private_items = "allow"
similar_names = "allow"
