[package]
name = "tinycongress-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"

# Database
sqlx-core = { version = "0.8", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "chrono", "uuid", "json", "migrate"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["chrono", "uuid", "json", "migrate"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
thiserror = "2.0"
anyhow = "1.0"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
hyper = "1.6"
sqlx-cli = { version = "0.8.6", features = ["postgres"] }
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "export_schema"
path = "src/bin/export_schema.rs"

[lints]
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "warn"
missing_panics_doc = "warn"
# Stricter error handling
unwrap_used = "warn"
expect_used = "warn"
# No debug/panic in production code
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
# Allowed
module_name_repetitions = "allow"
missing_docs_in_private_items = "allow"
similar_names = "allow"
