[package]
name = "tinycongress-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
# Expose mock implementations for integration tests
test-utils = []

[dependencies]
# Web server
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"

# OpenAPI / REST
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
sqlx-core = { version = "0.8", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "chrono", "uuid", "json", "migrate"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["chrono", "uuid", "json", "migrate"] }

# Configuration
figment = { version = "0.10", features = ["yaml", "env"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
serde-aux = "4.7.0"

# Cryptography
tc-crypto = { path = "../crates/tc-crypto", version = "0.1.0", features = ["ed25519"] }
sha2 = "0.10"

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hyper = "1.6"
insta = { version = "1.41", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
testcontainers = "0.26"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
once_cell = "1.19"
tc-test-macros = { path = "../crates/test-macros", version = "0.1.0" }
# Enable test-utils feature for integration tests
tinycongress-api = { path = ".", version = "0.1.0", features = ["test-utils"] }

[[bin]]
name = "export_schema"
path = "src/bin/export_schema.rs"

[[bin]]
name = "export_openapi"
path = "src/bin/export_openapi.rs"

# cargo-machete false positives (used via derive macros)
[package.metadata.cargo-machete]
ignored = ["serde", "thiserror", "async-trait", "utoipa"]

[lints]
workspace = true
