[package]
name = "tinycongress-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
test-utils = []

[dependencies]
# Web server
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
axum-prometheus = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"

# OpenAPI / REST
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "chrono",
] }
sqlx-core = { version = "0.8", default-features = false, features = [
  "_rt-tokio",
  "_tls-rustls-ring-webpki",
  "chrono",
  "uuid",
  "json",
  "migrate",
] }
sqlx-postgres = { version = "0.8", default-features = false, features = [
  "chrono",
  "uuid",
  "json",
  "migrate",
] }

# Configuration
figment = { version = "0.10", features = ["yaml", "env"] }

# Utilities
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.16", features = ["v4", "serde"] }

# HTTP client (OAuth flows)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"

# Engine plugin API
tc-engine-api = { path = "../crates/tc-engine-api", version = "0.1.0" }
tc-engine-polling = { path = "../crates/tc-engine-polling", version = "0.1.0" }
tc-llm = { path = "../crates/tc-llm", version = "0.1.0" }

# Cryptography
tc-crypto = { path = "../crates/tc-crypto", version = "0.1.0", features = ["ed25519"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
governor = "0.10"
tower_governor = "0.8"

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
hyper = "1.6"
insta = { version = "1.41", features = ["json", "redactions"] }
proptest = "1"
tower = { version = "0.5", features = ["util"] }
testcontainers = { version = "0.26", features = ["watchdog"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
tc-test-macros = { path = "../crates/test-macros", version = "0.1.0" }
tinycongress-api = { path = ".", version = "0.1.0", features = ["test-utils"] }
libc = "0.2"

[[bin]]
name = "export_schema"
path = "src/bin/export_schema.rs"

[[bin]]
name = "export_openapi"
path = "src/bin/export_openapi.rs"

[[bin]]
name = "sim"
path = "src/bin/sim.rs"

[[bin]]
name = "demo_verifier"
path = "src/bin/demo_verifier.rs"

# cargo-machete false positives (used via derive macros or wired in follow-up tasks)
[package.metadata.cargo-machete]
ignored = ["serde", "thiserror", "async-trait", "utoipa", "tc-engine-polling"]

[lints]
workspace = true
