[package]
name = "tc-crypto"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared cryptographic utilities for TinyCongress"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
ed25519 = ["ed25519-dalek"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"

# Cryptography
base64 = "0.22"
ed25519-dalek = { version = "2", optional = true }
sha2 = "0.10"

# Serialization
serde = "1"

# Error handling
thiserror = "2"

[dev-dependencies]
proptest = "1.4"
serde_json = "1"
wasm-bindgen-test = "0.3"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["thiserror"]
