[package]
name = "tc-engine-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Plugin contract for TinyCongress room engines"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"] }
thiserror = "2.0"
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1.16", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
