[package]
name = "tc-engine-polling"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Polling engine implementation for TinyCongress rooms"

[dependencies]
tc-engine-api = { path = "../tc-engine-api", version = "0.1.0" }
tc-llm = { path = "../tc-llm", version = "0.1.0" }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "time"] }
tracing = "0.1"
uuid = { version = "1.16", features = ["v4", "serde"] }

[lints]
workspace = true
