[package]
name = "tc-llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared LLM and Exa search client with cache detection"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[lints]
workspace = true
